--- a/New Flex/newflex.css
+++ b/New Flex/newflex.css
@@ -1,3 +1,17 @@
+header{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 10px;
+    background-color: rgb(235, 243, 236);
+}
+
+.logo img{
+    height: 100%;
+    width: 100%;
+    border-radius:100%;
+}
+
 .main-content{
     display: flex;    
     background-color: aqua;
@@ -9,7 +23,7 @@
     flex-direction: column;
     width:100%;
     background-color: blue;
-    /* align-items: center; */
+    align-items: center;
 }
 
 .left-up{
@@ -18,6 +32,8 @@
     justify-content:space-around ;
     display: flex;
     align-items: center;
+    padding: 10px;
+    
 }
 
 .left-up-items{
@@ -62,6 +78,33 @@
 
 .right-right{
     display: flex;
+    flex-direction: column;
     width:100%;
-    background-color: violet;
+    height: 100%;
+    
 }
+
+.right-left{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.right-up{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background-color: blue;
+    justify-content: center;
+    align-items: center;
+}
+
+.right-down{
+    display:flex;
+    background-color: antiquewhite;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
