--- a/New Flex/newflex.css
+++ b/New Flex/newflex.css
@@ -4,12 +4,59 @@ header{
     justify-content: space-around;
     padding: 10px;
     background-color: rgb(235, 243, 236);
+    height: 30px;
 }
 
 .logo img{
-    height: 100%;
+    height: 50px;
     width: 100%;
     border-radius:100%;
+}
+
+.sub-items{
+    display: none;
+    flex-direction: column;
+}
+
+.header-item{
+    position: relative;
+}
+
+.header-item:hover{
+    cursor: pointer;
+}
+
+.header-item:hover .sub-items{
+    display: flex !important;
+}
+
+.header-item .sub-items{
+    /* display: none !important; */
+    flex-direction: column;
+    background-color: rgb(61, 241, 6);
+    position: absolute;
+}
+
+.right-up-image{
+    display: flex;
+    align-items: flex-end;
+    justify-content: right;
+
+}
+
+.right-up-image img{
+    height: 100px;
+    width: 100px;
+    border-radius:100%;
+    
+}
+
+.contents{
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 50%;
 }
 
 .main-content{
